# NCNNCam

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: labels.txt  yolov2-tiny_voc.id.h
app/src/main/java/com/davidchiu/ncnncam/: AssetUtils.java  AutoFitTextureView.java  BorderedText.java  CameraActivity.java  CameraConnectionFragment.java  Detection.java  DetectorActivity.java  ImageUtils.java  LegacyCameraConnectionFragment.java  Logger.java  Ncnn.java  OverlayView.java  Size.java  SplitTimer.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/ncnn/: mobilenet_yolo.id.h  ncnn_jni.cpp  ncnn_model_defines.h  senhan0919.id.h  yolov2-tiny.id.h
app/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml  camera_connection_fragment_tracking.xml
app/src/main/res/values/: strings.xml
